tests/invalid/loops/too_few_for_clauses.rs
/*
fail: 1
*/

main(): int {
    for (i: int = 2; i < 3)
        3;
    return 0;
}